added dynamic task list date header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="bg-light border-right" id="sidebar-wrapper">
-                    <div class=" sidebar-heading ">nån onclick</div>
+                    <div id="tasklist-date" class=" sidebar-heading "></div>
                     <ul class="list-group list-group-flush overflow-auto " style="max-height: 40vh;">
                         <li class="list-group-item list-group-item-action bg-light ">
                             Dashboard
