added filter todo

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
                 <div class="bg-light border-right" id="sidebar-wrapper">
                     <div id="tasklist-date" class=" sidebar-heading "></div>
-                    <ul class="list-group list-group-flush overflow-auto " style="max-height: 40vh;">
-                        <li class="list-group-item list-group-item-action bg-light ">
+                    <ul class="list-group list-group-flush overflow-auto" id="todo-list-pop" style="max-height: 40vh;">
+                        <li class="list-group-item list-group-item-action bg-light">
                             Dashboard
                         </li>
                         <li class="list-group-item list-group-item-action bg-light ">
