--- a/index.html
+++ b/index.html
@@ -49,62 +49,33 @@
                 <div class="bg-light border-right" id="sidebar-wrapper">
                     <div id="tasklist-date" class=" sidebar-heading "></div>
                     <ul class="list-group list-group-flush overflow-auto " style="max-height: 40vh;">
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
-                        <li class="list-group-item list-group-item-action bg-light ">
-                            Dashboard
-                        </li>
+                        <div class="section1">
+                            <p>
+                                <label for="new-task">Add Tasks</label>
+                                <input id="new-task" type="text">
+                                <button>Add</button>
+                            </p>
+                        </div>
+                        <div class="section2">
+                            <h3>To-do</h3>
+                            <ul id="incomplete-tasks">
+    
+                            </ul>
+                        </div>
+                        <div class="section3">
+                                <h3>Completed Tasks</h3>
+                                <ul id="completed-tasks">
+                                <li>
+                                    <input type="checkbox" checked="">
+                                    <label>Learn JavaScript</label>
+                                    <input type="text">
+                                    <button class="edit">Edit</button>
+                                    <button class="delete">Delete</button>
+                                </li>
+                            </ul>
+                        </div>
                     </ul>
                 </div>
-
-                <button type="button" class="btn btn-primary" onclick="toggleForm()">Lägg till</button>
-
-                <form class="display-form" name="add" id="add-todo">
-                    <label>Todo:
-                        <input type="text" name="todo" id="todo" required/>
-                    </label>
-                    <label>Startar:
-                        <input type="time" name="startar" id="start" min="00:00" max="24:00" required/>
-                    </label>
-                    <label>Slutar:
-                        <input type="time" name="Slutar" id="end" min="00:00" max="24:00" required/>
-                    </label>
-                    <!-- <label>Datum:
-                            <input type="date" name="dateOf" id="dateOf" />
-                        </label> -->
-                    <input type="button" name="submit" value="Submit" onclick="processFormData();" />
-                </form>
             </aside>
 
             <div class="calendar col-9" id="calendar" style="height: 89vh;">
