fix.error and bind data to design

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <ul id="completed-tasks">
                   <li>
                     <input type="checkbox" checked="" />
-                    <label>Learn JavaScript</label>
+                    <label id="add-todo-pop"></label>
                     <input type="text" />
                     <button class="edit">Edit</button>
                     <button class="delete">Delete</button>
