--- a/index.html
+++ b/index.html
@@ -119,19 +119,7 @@
               </div>
               <div class="section2">
                 <h3>To-do</h3>
-                <ul id="incomplete-tasks"></ul>
-              </div>
-              <div class="section3">
-                <h3>Completed Tasks</h3>
-                <ul id="completed-tasks">
-                  <li>
-                    <input type="checkbox" checked="" />
-                    <label id="add-todo-pop"></label>
-                    <input type="text" />
-                    <button class="edit">Edit</button>
-                    <button class="delete">Delete</button>
-                  </li>
-                </ul>
+                    <ul id="todo-list-pop"></ul>
               </div>
             </ul>
           </div>
