fix delete to localstorage

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                         <div class="section2">
                             <h4>Schema för arbete/skola</h4>
                             <ul id="todo-list-pop"></ul>
+                            <!-- injected from js -->
                         </div>
                     </ul>
                 </div>
