removed background color for label

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                      <label>Todo
                         <input type="text" id="eddit-todo">
                     </label>
-                     <label style="background-color: black;"
+                     <label 
                     >Startar:
                     <input
                       type="time"
